# sfml-parallax-scrolling

./: .clang-format  .editorconfig  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/game/: Game.cpp  Game.hpp  World.cpp  World.hpp
src/game/resources/: ResourceIdentifiers.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceManager.inl
src/game/scene_graph/: SceneNode.cpp  SceneNode.hpp  SpriteNode.cpp  SpriteNode.hpp
